feat: completing reset password feature
